--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <head>
     <!-- aqui van todos METADATOS , que usa el navegador  -->
-    <title>Registro Personas</title>
+    <title>Registro Personas OK</title>
     <!-- es el titulo para la página -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
