--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <body>
     <!-- todo lo que queremos que vea el usuario , Incluyendo el Esquema de HTML5 : header,nav,Section,aside y footer -->
+    <!-- Haa , pero ya entendí , que este ejercicio no lleva el formato de Angular todavía-->
 
     <header>
         <img src="imagenes/logo.png" alt="Aqui va Logo" id="frameLogo">
