--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Marcos Lozano" />
     <meta name="keywords" content="poner palabras clave para los navegadores, serapadas por coma">
 
-    <link rel="stylesheet" href="index_estilos.css">
+    <link rel="stylesheet" href="../index_estilos.css">
 
 </head>
 
@@ -29,9 +29,9 @@
 
     <nav class="menuInicial">
         <ul>
-            <li><a href="index.html">Inicial</a></li>
-            <li><a href="pagina2.html">Pagina2</a></li>
-            <li><a href="./OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
+            <li><a href="../index.html">Inicial</a></li>
+            <li><a href="./pagina2.html">Pagina2</a></li>
+            <li><a href="../OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
 
