--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <nav class="menuInicial">
         <ul>
             <li><a href="index.html">Inicial</a></li>
-            <li><a href="pagina2.html">Pagina2</a></li>
+            <li><a href="./pagina2/pagina2.html">Pagina2</a></li>
             <li><a href="./OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
