--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -13,8 +13,10 @@
     <meta name="author" content="Marcos Lozano" />
     <meta name="keywords" content="poner palabras clave para los navegadores, serapadas por coma">
 
-    <link rel="stylesheet" href="../index_estilos.css">
+    <link rel="stylesheet" href="./pagina2.css">
 
+    <script type="text/javascript" src="pagina2.js"></script>
+		
 </head>
 
 
@@ -23,8 +25,8 @@
     <!-- todo lo que queremos que vea el usuario , Incluyendo el Esquema de HTML5 : header,nav,Section,aside y footer -->
 
     <header>
-        <img src="imagenes/logo.png" alt="Aqui va Logo" id="frameLogo">
-        <img class="perfilUsuario" src="imagenes/perfilUsuario.png" alt="Imagen del usuario" id="framePerfilUsuario">
+        <img src="../imagenes/logo.png" alt="Aqui va Logo" id="frameLogo">
+        <img class="perfilUsuario" src="../imagenes/perfilUsuario.png" alt="Imagen del usuario" id="framePerfilUsuario">
     </header>
 
     <nav class="menuInicial">
@@ -41,15 +43,13 @@
 
         <br>
         <br>
-        <br> Hola mundo
+        <br> Hola mundo XXX
 
     </section>
 
 
     <footer>
-        <input type="button" value="Guardar" href="" id="botonGuardar">
-        <input type="button" value="Cancelar" href="" id="botonCancelar">
-
+ 
     </footer>
 
 </body>
