--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -40,10 +40,11 @@
 
     <section>
 
+        <div id="mi_caja">
+         <br>
+         <br> Hola mundo XXX
+        </div>
 
-        <br>
-        <br>
-        <br> Hola mundo XXX
 
     </section>
 
