--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -33,6 +33,7 @@
         <ul>
             <li><a href="../index.html">Inicial</a></li>
             <li><a href="./pagina2.html">Pagina2</a></li>
+            <li><a href="../pagina3/pagina3.html">Pagina3</a></li>
             <li><a href="../OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
