--- a/pagina3/pagina3.html
+++ b/pagina3/pagina3.html
@@ -38,8 +38,16 @@
         </ul>
     </nav>
 
+    <div class = "amarillo"> soy el 1er div!</div>
+    <div class= "verde"> soy el 2do div!</div>
+    <div class= "verde"> soy el 3er div!</div>
 
-    <section>
+    <section id="miSeccion">
+
+        <div id="micaja">¡Hola soy una caja!</div>
+
+
+
     </section>
 
 
