--- a/pagina3/pagina3.html
+++ b/pagina3/pagina3.html
@@ -44,9 +44,14 @@
 
     <section id="miSeccion">
 
+        <button id="stop">Detener ciclo</button>
+        <button id="start">Iniciar ciclo</button>
+        
         <div id="micaja">¡Hola soy una caja!</div>
 
-
+        <form>
+            <input type="text" name="nombre" id="campo_nombre">
+        </form>
 
     </section>
 
