--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -34,6 +34,7 @@
             <li><a href="../index.html">Inicial</a></li>
             <li><a href="./pagina2.html">Pagina2</a></li>
             <li><a href="../pagina3/pagina3.html">Pagina3</a></li>
+            <li><a href="../pagina4/pagina4.html">Pagina4</a></li>
             <li><a href="../OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
