--- a/pagina3/pagina3.html
+++ b/pagina3/pagina3.html
@@ -32,8 +32,9 @@
     <nav class="menuInicial">
         <ul>
             <li><a href="../index.html">Inicial</a></li>
-            <li><a href="./pagina2/pagina2.html">Pagina2</a></li>
-            <li><a href="pagina3.html">Pagina3</a></li>
+            <li><a href="../pagina2/pagina2.html">Pagina2</a></li>
+            <li><a href="./pagina3.html">Pagina3</a></li>
+            <li><a href="../pagina4/pagina4.html">Pagina4</a></li>
             <li><a href="../OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
@@ -45,7 +46,7 @@
     <section id="miSeccion">
 
         <button id="stop">Detener ciclo</button>
-        <button id="start">Iniciar ciclo</button>
+        <button id="start"  ariaDisabled="true">Iniciar ciclo</button>
         
         <div id="micaja">¡Hola soy una caja!</div>
 
