--- a/pagina4/pagina4.html
+++ b/pagina4/pagina4.html
@@ -4,7 +4,7 @@
 
 <head>
     <!-- aqui van todos METADATOS , que usa el navegador  -->
-    <title>Mapa</title>
+    <title>Registro Personas</title>
     <!-- es el titulo para la página -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,10 +13,10 @@
     <meta name="author" content="Marcos Lozano" />
     <meta name="keywords" content="poner palabras clave para los navegadores, serapadas por coma">
 
-    <link rel="stylesheet" href="../index_estilos.css">
-    <link rel="stylesheet" href="./lib/OpenLayers/ol.css">
-    <link rel="stylesheet" href="./mapa_estilos.css">
+    <link rel="stylesheet" href="./pagina4.css">
 
+    <script type="text/javascript" src="pagina4.js"></script>
+		
 </head>
 
 
@@ -34,28 +34,58 @@
             <li><a href="../index.html">Inicial</a></li>
             <li><a href="../pagina2/pagina2.html">Pagina2</a></li>
             <li><a href="../pagina3/pagina3.html">Pagina3</a></li>
-            <li><a href="../pagina4/pagina4.html">Pagina4</a></li>
-            <li><a href="./mapa.html">Mi Mapa</a></li>
+            <li><a href="./pagina4.html">Pagina4</a></li>
+            <li><a href="../OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
 
-
-    <!-- El curso dice que aqui en el BODY pongamos los scripts ;  NO SE POR QUE!!. ¿no debería ser en el ancabezado ? -->
-    <script src='./lib/OpenLayers/ol.js'></script>
-    <script src='./mapa.js'></script>
-
-
+   
     <section>
 
-        <div id='mi_mapa' class='map'></div>
+       <div id="peliculas">
+            <h2>Peliculas</h2>
+       </div>
+
+       <div >
+            <h2>Local Storage</h2>
+            <p id="pruebaLocalStorage"></p>
+       </div>
+
+       <div >
+        <h2>Mis Datos</h2>
+        <p id="misDatos"></p>
+   </div>
+
+<hr>
+<hr>
+
+    <div>
+        <h1>Añade una Ciudad</h1>
+
+        <form action="" id="formciudades">
+            <input type="text" id= "addCiudad">
+            <button type="submit">Guardar en LocalStorage</button>
+        </form>
+
+
+        <form action="" id="formBorraCiudades">
+            <input type="text" id= "borraCiudad">
+            <button type="submit">Borrar Ciudad</button>
+        </form>
+
+
+        <div>
+            <h3>Muestra la Lista de Ciudades del LocalStorage</h3>
+            <ul id="ciudades-list"></ul>
+        </div>
+    </div>
+
+
 
     </section>
 
 
     <footer>
-        <input type="button" value="Guardar" href="" id="botonGuardar">
-        <input type="button" value="Cancelar" href="" id="botonCancelar">
-
     </footer>
 
 </body>
