--- a/pagina4/pagina4.html
+++ b/pagina4/pagina4.html
@@ -35,6 +35,7 @@
             <li><a href="../pagina2/pagina2.html">Pagina2</a></li>
             <li><a href="../pagina3/pagina3.html">Pagina3</a></li>
             <li><a href="./pagina4.html">Pagina4</a></li>
+            <li><a href="../pagina5/pagina5.html">Pagina5</a></li>
             <li><a href="../OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
