--- a/pagina5/pagina5.html
+++ b/pagina5/pagina5.html
@@ -13,9 +13,9 @@
     <meta name="author" content="Marcos Lozano" />
     <meta name="keywords" content="poner palabras clave para los navegadores, serapadas por coma">
 
-    <link rel="stylesheet" href="./pagina2.css">
+    <link rel="stylesheet" href="./pagina5.css">
 
-    <script type="text/javascript" src="pagina2.js"></script>
+    <script type="text/javascript" src="pagina5.js"></script>
 		
 </head>
 
@@ -32,28 +32,37 @@
     <nav class="menuInicial">
         <ul>
             <li><a href="../index.html">Inicial</a></li>
-            <li><a href="./pagina2.html">Pagina2</a></li>
+            <li><a href="../pagina2/pagina2.html">Pagina2</a></li>
             <li><a href="../pagina3/pagina3.html">Pagina3</a></li>
             <li><a href="../pagina4/pagina4.html">Pagina4</a></li>
-            <li><a href="../pagina5/pagina5.html">Pagina5</a></li>
+            <li><a href="./pagina5.html">Pagina5</a></li>
             <li><a href="../OpenLayers_WebMap/mapa.html">Mi Mapa</a></li>
         </ul>
     </nav>
 
-
+   
     <section>
 
-        <div id="mi_caja">
-         <br>
-         <br> Hola mundo XXX
-        </div>
-
-
-    </section>
+            <h1>Datos Externos con Fetch</h1>
+ 
+            <h1>Listado de usuarios</h1>
+            <div id="usuarios">
+                <span class="loading">Cargando datos globales...</span>
+            </div>
+            <hr>
+            <div id="profesor">
+                Cargando profesor...
+            </div>
+            <hr>
+            <div id="janet">
+                <span class="loading">Cargando usuario...</span>
+            </div>
+            
+ 
+        </section>
 
 
     <footer>
- 
     </footer>
 
 </body>
